Added the conclusion

--- a/predictions.ipynb
+++ b/predictions.ipynb
@@ -1096,6 +1096,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The process helped us learn the value of \n",
+    "- statistical analysis (the most interesting statistic we found was the high correlation between betting sites and winning percentage showing that betting sites use data science like we do, and that winning percentage is reflected heavily in their models. It was also interesting to note that the correlation was not perfect, and therefore the betting sites consider factors we did not have time to involve)\n",
+    "- data cleaning (we cleaned the data and had to calculate z-score and convert the betting odds into probabilities)\n",
+    "- data visualization (plotting data, labeling data, generating a line of best fit)\n",
+    "- data analysis (using the line of best fit as a correlation line to indicate stronger teams to the top right and and weaker tops towards the bottom left)\n",
+    "\n",
+    "If we had fewer time restrictions we would have involved more stastics towards our correlation model, and possibly involved another data science tool, such as a distribution curve. We would have also liked to involve other interesting stastics that are not reflected by the betting sites, such as twitter mentions, jersey sales, and the DSP gut-feeling statistic (very accurate). By incoperating these models with our correlation models, we could determine if gut-feeling and crowd-enthusiam correlates to stronger teams. This would determine if gut-feeling is a worthy predictor or if one should simply stick to the hard stats."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
